--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/js": "^5.6.55",
+    "@websanova/vue-auth": "^4.0.3",
     "algoliasearch": "^4.5.1",
     "apexcharts": "^3.21.0",
     "axios": "^0.21.0",
