--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "feather-icons": "^4.28.0",
     "instantsearch.css": "^7.4.5",
     "jszip": "3.1.3",
+    "mdbvue": "^6.7.2",
     "moment": "^2.29.0",
     "nprogress": "^0.2.0",
     "quill": "1.3.7",
